--- a/style.css
+++ b/style.css
@@ -192,7 +192,23 @@ th{
 }
 
 .contentCenter{
-      width: 400px; /* Ширина элемента в пикселах */
+      width: 200px; /* Ширина элемента в пикселах */
     padding: 10px; /* Поля вокруг текста */
     margin: auto; /* Выравниваем по центру */
+}
+
+.gmn p{
+  background-color: black;
+  color: white;
+  text-decoration: none;
+  height: 50%;
+  display: block;
+  width: 300px;
+  text-align: center;
+  padding-top: 30px;
+}
+
+.gmn:hover{
+  text-decoration: none;
+  color: white;
 }
